# agentic_lab_academy

./: .gitignore  README.md  __init__.py  academy_agents.py  config.py  llm.py  main.py  models.py  prompts.py  pyproject.toml  requirements.txt  utils.py
workflows/: __init__.py  orchestrator.py
