[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic_lab_academy"
version = "0.1.0"
description = "Academy-based reimplementation of the Agentic Lab framework"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
  "academy-py>=0.1.0",
  "requests>=2.32.0",
  "duckduckgo_search>=5.3.0",
  "beautifulsoup4>=4.12.0",
  "python-docx>=1.1.0",
  "PyPDF2>=3.0.0"
]

[project.scripts]
agentic-lab-academy = "agentic_lab_academy.main:main"
